# Mastering-Data-Structures-and-Algorithms-Abdul-Bari

./: CMakeLists.txt  README.md
section02_essential_c_and_cpp_concepts/: array_as_parameter.cpp  converting_c_to_cpp_class.cpp  parameter_passing.cpp  pointer.cpp  reference.cpp  struct.cpp  structure_and_functions.cpp  structure_as_parameter.cpp  template_class.cpp  test.cpp
section05_recursion/: factorial_of_a_number.cpp  fibonacci_series.cpp  head_recursion.cpp  indirect_recursion.cpp  intro.cpp  nCr_recursion.cpp  nested_recursion.cpp  power_function_with_recursion.cpp  static_global_variables.cpp  sum_of_natural_numbers.cpp  tail_recursion.cpp  taylor_series_horners_rule.cpp  taylor_series_recursion.cpp  tower_of_hanoi.cpp  tree_recursion.cpp
section05_recursion/exercise/: exercise_problems.cpp
section06_arrays_representation/: 2d_array.cpp  intro.cpp  static_vs_dynamic_array.cpp
section06_arrays_representation/exercise/: quiz.cpp
section07_array_adt/: c_to_cpp.cpp  check_array_if_sorted.cpp  get_set_avg_max.cpp  intro.cpp  intro_array_adt.cpp  linear_search.cpp  main.cpp  main_array_adt.cpp  merging_arrays.cpp  reverse_and_shift.cpp  set_union_intersection_difference.cpp  stdafx.h
section07_array_adt/student_challenge/: find_duplicate_elements.cpp  find_missing_elements.cpp  find_pair_of_elements.cpp  quiz_array_adt.cpp
section08_strings/: string_basic.cpp
