cmake_minimum_required(VERSION 3.19)
project(Mastering_Data_Stuctures_and_Algorithms_Abdul_bari)

set(CMAKE_CXX_STANDARD 14)

add_executable(main main.cpp)
add_executable(struct section02_essential_c_and_cpp_concepts/struct.cpp)
add_executable(pointer section02_essential_c_and_cpp_concepts/pointer.cpp)
add_executable(reference section02_essential_c_and_cpp_concepts/reference.cpp)
add_executable(function section02_essential_c_and_cpp_concepts/parameter_passing.cpp)
add_executable(array_as_parameter section02_essential_c_and_cpp_concepts/array_as_parameter.cpp)
add_executable(structure_as_parameter section02_essential_c_and_cpp_concepts/structure_as_parameter.cpp)
add_executable(structure_and_functions section02_essential_c_and_cpp_concepts/structure_and_functions.cpp)
add_executable(converting_c_to_cpp_class section02_essential_c_and_cpp_concepts/converting_c_to_cpp_class.cpp)
add_executable(template_class section02_essential_c_and_cpp_concepts/template_class.cpp)
add_executable(intro section05_recursion/intro.cpp)