cmake_minimum_required(VERSION 3.19)
project(Mastering_Data_Stuctures_and_Algorithms_Abdul_bari)

set(CMAKE_CXX_STANDARD 14)


add_executable(struct section02_essential_c_and_cpp_concepts/struct.cpp)
add_executable(pointer section02_essential_c_and_cpp_concepts/pointer.cpp)
add_executable(reference section02_essential_c_and_cpp_concepts/reference.cpp)
add_executable(function section02_essential_c_and_cpp_concepts/parameter_passing.cpp)
add_executable(array_as_parameter section02_essential_c_and_cpp_concepts/array_as_parameter.cpp)
add_executable(structure_as_parameter section02_essential_c_and_cpp_concepts/structure_as_parameter.cpp)
add_executable(structure_and_functions section02_essential_c_and_cpp_concepts/structure_and_functions.cpp)
add_executable(converting_c_to_cpp_class section02_essential_c_and_cpp_concepts/converting_c_to_cpp_class.cpp)
add_executable(template_class section02_essential_c_and_cpp_concepts/template_class.cpp)

add_executable(static_global_variables section05_recursion/static_global_variables.cpp)
add_executable(tail_recursion section05_recursion/tail_recursion.cpp)
add_executable(head_recursion section05_recursion/head_recursion.cpp)
add_executable(tree_recursion section05_recursion/tree_recursion.cpp)
add_executable(indirect_recursion section05_recursion/indirect_recursion.cpp)
add_executable(nested_recursion section05_recursion/nested_recursion.cpp)
add_executable(sum_of_natural_numbers section05_recursion/sum_of_natural_numbers.cpp)
add_executable(factorial_of_a_number section05_recursion/factorial_of_a_number.cpp)
add_executable(power_function_with_recursion section05_recursion/power_function_with_recursion.cpp)
add_executable(taylor_series_recursion section05_recursion/taylor_series_recursion.cpp)
add_executable(taylor_series_horners_rule section05_recursion/taylor_series_horners_rule.cpp)
add_executable(fibonacci_series section05_recursion/fibonacci_series.cpp)
add_executable(nCr_recursion section05_recursion/nCr_recursion.cpp)
add_executable(tower_of_hanoi section05_recursion/tower_of_hanoi.cpp)
add_executable(exercise_problems section05_recursion/exercise/exercise_problems.cpp)

add_executable(static_vs_dynamic_array section06_arrays_representation/static_vs_dynamic_array.cpp)
add_executable(quiz section06_arrays_representation/exercise/quiz.cpp)

add_executable(intro_array_adt section07_array_adt/intro_array_adt.cpp)
add_executable(linear_search section07_array_adt/linear_search.cpp)
add_executable(get_set_avg_max section07_array_adt/get_set_avg_max.cpp)

add_executable(main_array_adt section07_array_adt/main_array_adt.cpp
        section07_array_adt/intro_array_adt.cpp
        section07_array_adt/linear_search.cpp
        section07_array_adt/get_set_avg_max.cpp
        section07_array_adt/reverse_and_shift.cpp section07_array_adt/check_array_if_sorted.cpp section07_array_adt/merging_arrays.cpp section07_array_adt/set_union_intersection_difference.cpp section07_array_adt/c_to_cpp.cpp)

add_executable(2d_array
        section06_arrays_representation/2d_array.cpp)

add_executable(st_chllng_missing section07_array_adt/student_challenge/find_missing_elements.cpp)
add_executable(st_chllng_duplicate section07_array_adt/student_challenge/find_duplicate_elements.cpp)